home/nextcloud/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud
  ports:
    - port: 9000
      targetPort: web
      name: web
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:31.0.4
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html/data
              name: nextcloud-data
              subPath: data
            - mountPath: /var/www/html/config
              name: nextcloud-data
              subPath: config
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-data
              subPath: custom_apps
      terminationGracePeriodSeconds: 600
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
