home/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: nextcloud
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.<homelab-domain>
      http:
        paths:
          - path: /
            backend:
              service:
                name: nextcloud
                port:
                  name: web
            pathType: Prefix
  tls:
    - hosts:
        - nextcloud.<homelab-domain>
      secretName: "nextcloud.homelab-cert"
